--- a/todo-example/angularjs/persistencejs/css/app.css
+++ b/todo-example/angularjs/persistencejs/css/app.css
@@ -240,7 +240,7 @@ html {
 	box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
 }
 /* line 136 */
-#todoapp #todo-stats .todo-clear a:hover {
+#todoapp #todo-stats .todo-clear a:hover, #todoapp #todo-stats .todo-clear a:focus {
 	background: rgba(0, 0, 0, 0.15);
 	-moz-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
 	-webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
@@ -255,7 +255,7 @@ html {
       #todo-stats .todo-clear a:visited {
         color: #777777;
       }
-      #todo-stats .todo-clear a:hover {
+      #todo-stats .todo-clear a:hover, #todo-stats .todo-clear a:focus {
         color: #336699;
       }
 
