--- a/todo-example/javascriptmvc/todo/todo/production.css
+++ b/todo-example/javascriptmvc/todo/todo/production.css
@@ -150,6 +150,13 @@ ul {
 	-o-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
 	box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
 }
+.todo-clear a:hover, .todo-clear a:focus {
+	background: rgba(0, 0, 0, 0.15);
+}
+#todoapp #todo-stats .todo-clear a:active {
+	position: relative;
+	top: 1px;
+}
 
 
 #credits {
