--- a/todo-example/emberjs/css/todos.css
+++ b/todo-example/emberjs/css/todos.css
@@ -396,6 +396,10 @@ body {
 
 	border:0px;
 }
+#todoapp #todo-stats button.none-completed {
+  display: none;
+}
+
 /* line 136 */
 #todoapp #todo-stats button:hover, #todoapp #todo-stats button:focus {
 	background: rgba(0, 0, 0, 0.15);
