Add reference to app.js in HTML

--- a/todo-example/template/index.html
+++ b/todo-example/template/index.html
@@ -46,5 +46,6 @@
 		Created by <a href="http://addyosmani.github.com/todomvc/">you</a>.
 	</div>
 	<!-- scripts here -->
+	<script src="js/app.js"></script>
 </body>
 </html>
