Add "Mark as complete" checkbox

--- a/todo-example/template/css/app.css
+++ b/todo-example/template/css/app.css
@@ -57,6 +57,10 @@ body {
 	font-style: italic;
 }
 
+#todoapp #toggle-all-container {
+	display: none;
+}
+
 #todoapp .items {
 	margin: 10px 0;
 	padding: 0;
