--- a/todo-example/template/index.html
+++ b/todo-example/template/index.html
@@ -10,6 +10,11 @@
 		<header>
 			<h1>Todos</h1>
 			<input type="text" placeholder="What needs to be done?">
+			<!-- toggle-all-container is hidden by default and should be shown when there are todos, and hidden when not -->
+			<div id="toggle-all-container">
+				<input id="toggle-all" type="checkbox">
+				<label for="toggle-all">Mark all as complete</label>
+			</div>
 		</header>
 		<ul class="items">
 			<li class="item done">
