Remove title from `.view` divs, it's in the footer anyway

--- a/todo-example/template/index.html
+++ b/todo-example/template/index.html
@@ -17,7 +17,7 @@
 			<label for="toggle-all">Mark all as complete</label>
 			<ul class="items">
 				<li class="item done">
-					<div class="view" title="Double click to edit...">
+					<div class="view">
 						<input class="toggle" type="checkbox" checked>
 						<span>Create a TodoMVC template</span>
 						<a class="destroy"></a>
@@ -27,7 +27,7 @@
 					</div>
 				</li>
 				<li class="item">
-					<div class="view" title="Double click to edit...">
+					<div class="view">
 						<input class="toggle" type="checkbox">
 						<span>Rule the web</span>
 						<a class="destroy"></a>
