Switch from `<span>` to `<label>` as the todo text wrapper, since it's the label to the checkbox

--- a/template/index.html
+++ b/template/index.html
@@ -19,7 +19,7 @@
 				<li class="done">
 					<div class="view">
 						<input class="toggle" type="checkbox" checked>
-						<span>Create a TodoMVC template</span>
+						<label>Create a TodoMVC template</label>
 						<a class="destroy"></a>
 					</div>
 					<input class="edit" type="text" value="Create a TodoMVC template">
@@ -27,7 +27,7 @@
 				<li>
 					<div class="view">
 						<input class="toggle" type="checkbox">
-						<span>Rule the web</span>
+						<label>Rule the web</label>
 						<a class="destroy"></a>
 					</div>
 					<input class="edit" type="text" value="Rule the web">
