Move the css to the assets folder

--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Template - TodoMVC</title>
+	<link rel="stylesheet" href="../assets/base.css">
 	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
