added todo counter

--- a/architecture-examples/angularjs/css/overwrite.css
+++ b/architecture-examples/angularjs/css/overwrite.css
@@ -2,3 +2,12 @@
 #main {
     display: block;
 }
+
+#todoapp footer{
+    display: block;
+}
+
+/*this doesn't seemed to be used in the jquery example at all. Its getting in the way */
+#todo-count span {
+	font-weight: inherit;
+}
