--- a/architecture-examples/angularjs/css/overwrite.css
+++ b/architecture-examples/angularjs/css/overwrite.css
@@ -7,7 +7,7 @@
     display: block;
 }
 
-/*this doesn't seemed to be used in the jquery example at all. Its getting in the way */
+/*this doesn't seem to be used in the jquery example at all. Its getting in the way */
 #todo-count span {
 	font-weight: inherit;
 }
