added more meaningful comments to the overwrite.css

--- a/architecture-examples/angularjs/css/overwrite.css
+++ b/architecture-examples/angularjs/css/overwrite.css
@@ -1,10 +1,16 @@
-/*overwrite this as its getting in the angular way */
+/*hiding those elements by default is really getting into the anguluar way
+as AngularJS's show directive will keep track of hiding/showing the elements for us*/
+
 #main {
-    display: block;
+    display: inherit;
 }
 
 #todoapp footer{
-    display: block;
+    display: inherit;
+}
+
+#clear-completed{
+    display: inherit;
 }
 
 /*this doesn't seem to be used in the jquery example at all. Its getting in the way */
