--- a/template/index.html
+++ b/template/index.html
@@ -2,51 +2,65 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Template - TodoMVC</title>
+	<title>Template • TodoMVC</title>
 	<link rel="stylesheet" href="../assets/base.css">
+	<!-- CSS overrides - remove if you don't need it -->
 	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-	<div id="todoapp">
-		<header>
-			<h1>Todos</h1>
-			<input id="new-todo" type="text" placeholder="What needs to be done?">
+	<section id="todoapp">
+		<header id="header">
+			<h1>todos</h1>
+			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
-		<!-- this section is hidden by default and you be shown when there are todos and hidden when not -->
+		<!-- this section should hidden by default and shown when there are todos -->
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list">
-				<li class="done">
+				<li class="complete">
 					<div class="view">
 						<input class="toggle" type="checkbox" checked>
 						<label>Create a TodoMVC template</label>
-						<a class="destroy"></a>
+						<button class="destroy"></button>
 					</div>
-					<input class="edit" type="text" value="Create a TodoMVC template">
+					<input class="edit" value="Create a TodoMVC template">
 				</li>
 				<li>
 					<div class="view">
 						<input class="toggle" type="checkbox">
 						<label>Rule the web</label>
-						<a class="destroy"></a>
+						<button class="destroy"></button>
 					</div>
-					<input class="edit" type="text" value="Rule the web">
+					<input class="edit" value="Rule the web">
 				</li>
 			</ul>
 		</section>
-		<!-- this footer needs to be shown with JS when there are todos and hidden when not -->
-		<footer>
-			<a id="clear-completed">Clear completed</a>
-			<div id="todo-count"></div>
+		<!-- this footer should hidden by default and shown when there are todos -->
+		<footer id="footer">
+			<span id="todo-count"><strong>1</strong> item left</span>
+			<!-- remove this if you don't implement routing -->
+			<ul id="filters">
+				<li>
+					<a class="selected" href="#/">All</a>
+				</li>
+				<li>
+					<a href="#/active">Active</a>
+				</li>
+				<li>
+					<a href="#/completed">Completed</a>
+				</li>
+			</ul>
+			<button id="clear-completed">Clear completed (1)</button>
 		</footer>
-	</div>
-	<div id="instructions">
-		Double-click to edit a todo.
-	</div>
-	<div id="credits">
-		Created by <a href="http://addyosmani.github.com/todomvc/">you</a>.
-	</div>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<!-- delete this ↓ -->
+		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<!-- change this out with your name and url ↓ -->
+		<p>Created by <a href="http://addyosmani.github.com/todomvc/">you</a></p>
+	</footer>
 	<!-- scripts here -->
 	<script src="js/app.js"></script>
 </body>
