--- a/template/index.html
+++ b/template/index.html
@@ -13,12 +13,14 @@
 			<h1>todos</h1>
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
-		<!-- this section should hidden by default and shown when there are todos -->
+		<!-- this section should be hidden by default and shown when there are todos -->
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list">
-				<li class="complete">
+				<!-- these are here just to show the structure of the list items -->
+				<!-- list items should get the class `editing` when editing and `completed` when marked as completed -->
+				<li class="completed">
 					<div class="view">
 						<input class="toggle" type="checkbox" checked>
 						<label>Create a TodoMVC template</label>
