Add another comment to the template

--- a/template/index.html
+++ b/template/index.html
@@ -40,6 +40,7 @@
 		</section>
 		<!-- this footer should hidden by default and shown when there are todos -->
 		<footer id="footer">
+			<!-- this should be `0 items left` by default -->
 			<span id="todo-count"><strong>1</strong> item left</span>
 			<!-- remove this if you don't implement routing -->
 			<ul id="filters">
