Add link back to the project page

--- a/template/index.html
+++ b/template/index.html
@@ -62,6 +62,7 @@
 		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 		<!-- change this out with your name and url ↓ -->
 		<p>Created by <a href="http://addyosmani.github.com/todomvc/">you</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<!-- scripts here -->
 	<script src="js/app.js"></script>
