--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Template • TodoMVC</title>
 	<link rel="stylesheet" href="../assets/base.css">
 	<!-- CSS overrides - remove if you don't need it -->
