--- a/site/css/bootstrap.css
+++ b/site/css/bootstrap.css
@@ -2078,6 +2078,7 @@ button.btn.small, input[type="submit"].btn.small {
   margin-left: 0;
   margin-bottom: 18px;
   list-style: none;
+  width: 150px;
 }
 .nav > li > a {
   display: block;
