More after-merge cleanup

--- a/labs/architecture-examples/troopjs/css/app.css
+++ b/labs/architecture-examples/troopjs/css/app.css
@@ -1,4 +1,4 @@
-@import url("../../../assets/base.css");
+@import url("../../../../assets/base.css");
 
 /* base.css overrides */
 #todo-list li .prepare {
