--- a/template/index.html
+++ b/template/index.html
@@ -14,13 +14,13 @@
 			<h1>todos</h1>
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
-		<!-- this section should be hidden by default and shown when there are todos -->
+		<!-- This section should be hidden by default and shown when there are todos -->
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list">
-				<!-- these are here just to show the structure of the list items -->
-				<!-- list items should get the class `editing` when editing and `completed` when marked as completed -->
+				<!-- These are here just to show the structure of the list items -->
+				<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 				<li class="completed">
 					<div class="view">
 						<input class="toggle" type="checkbox" checked>
@@ -39,11 +39,11 @@
 				</li>
 			</ul>
 		</section>
-		<!-- this footer should hidden by default and shown when there are todos -->
+		<!-- This footer should hidden by default and shown when there are todos -->
 		<footer id="footer">
-			<!-- this should be `0 items left` by default -->
+			<!-- This should be `0 items left` by default -->
 			<span id="todo-count"><strong>1</strong> item left</span>
-			<!-- remove this if you don't implement routing -->
+			<!-- Remove this if you don't implement routing -->
 			<ul id="filters">
 				<li>
 					<a class="selected" href="#/">All</a>
@@ -61,11 +61,12 @@
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
-		<!-- change this out with your name and url ↓ -->
+		<!-- Change this out with your name and url ↓ -->
 		<p>Created by <a href="http://addyosmani.github.com/todomvc/">you</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-	<!-- scripts here -->
+	<!-- Scripts here. Don't remove this ↓ -->
+	<script src="../assets/base.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
