--- a/template/index.html
+++ b/template/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="../assets/base.css">
 	<!-- CSS overrides - remove if you don't need it -->
 	<link rel="stylesheet" href="css/app.css">
+	<!--[if IE]>
+	<script src="../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
