Add ie.js and analytics to the labs apps not currently in pull request queue

--- a/template/index.html
+++ b/template/index.html
@@ -63,9 +63,9 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<!-- Change this out with your name and url ↓ -->
-		<p>Created by <a href="http://addyosmani.github.com/todomvc/">you</a></p>
+		<p>Created by <a href="http://todomvc.com">you</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<!-- Scripts here. Don't remove this ↓ -->
